--- a/q3-Admin/src/App.css
+++ b/q3-Admin/src/App.css
@@ -41,9 +41,12 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding:12px 16px;
+  padding:8px 16px;
   border-bottom: 1px solid #ebecef;
   margin: 0 0 17px 0;
+}
+.sidebar.collapsed .sidebar-header{
+    padding: 14px 16px;
 }
 .nav_bar_menu{
   padding:12px 16px;
